Fixed navbar z-index

--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,7 @@ body, h1, h2, h3, h4, h5, h6, p {
     padding-right: 1em;
     padding-bottom: 1em;
     background-color: #fff;
+    z-index: 999;
 }
 
 .nav-item {
